src/css/main.css
@import "tailwindcss";

@font-face {
  font-display: block;
  font-family: "Work Sans";
  font-style: normal;
  font-weight: 500;
  src: url("../fonts/WorkSans-VariableFont_wght.ttf") format("truetype");
}

@font-face {
  font-display: block;
  font-family: "Work Sans";
  font-style: italic;
  font-weight: 400;
  src: url("../fonts/WorkSans-Italic-VariableFont_wght.ttf") format("truetype");
}

@font-face {
  font-display: block;
  font-family: "Lilex";
  font-style: normal;
  font-weight: 500;
  src: url("../fonts/Lilex-Medium.woff2") format("woff2");
}

@theme {
  --font-sans: "Lilex", sans-serif;
  --color-mj-blue: #356baf;
  --color-mj-blue-secondary: #517db8;
  --color-mj-blue-light: #f6f7fb;
  --color-mj-orange: #ff5141; /* #f75c36; or ff634d FF5141*/
}

@custom-variant dark (&:where([data-theme="dark"], [data-theme="dark"] *));

@utility header {
  @apply py-2;
}

@layer base {
  h1 {
    font-family: "Work Sans", "Lilex", sans-serif;
    @apply font-medium;
  }

  a {
    @apply text-mj-blue underline;
  }

  a:hover {
    @apply text-mj-orange underline;
  }

  :root[data-theme="dark"] {
    --color-mj-blue: var(--color-blue-300);
  }
}

@layer components {
  .btn-dark-mode {
    @apply text-white;
    svg.light {
      display: none;
    }

    @variant dark {
      svg.dark {
        display: none;
      }
      svg.light {
        display: block;
      }
    }
  }

  .work-sans {
    font-family: "Work Sans", sans-serif;
  }

  .lilex {
    font-family: "Lilex", sans-serif;
  }

  .block {
    @apply rounded-xl bg-mj-blue-light p-8 md:p-16;
    h2 {
      @apply text-4xl;
    }
    @variant dark {
      @apply bg-zinc-800;
    }
  }

  .blog {
    @apply rounded-xl bg-mj-blue-light p-4 md:p-8 md:p-16 wrap-anywhere text-pretty;
    @variant dark {
      @apply bg-zinc-800;
    }

    h1 {
      font-size: var(--text-4xl);
      @apply header pb-0 leading-12;
    }

    h2 {
      font-size: var(--text-3xl);
      @apply header pt-4;
    }

    h3 {
      font-size: var(--text-2xl);
      @apply header pt-4;
    }

    h4 {
      font-size: var(--text-2xl);
      @apply header;
    }

    h5 {
      font-size: var(--text-xl);
      @apply header;
    }

    img {
      @apply drop-shadow-lg;
    }

    p,
    img,
    code,
    pre,
    ul,
    table {
      @apply mb-4;
    }

    ul {
      @apply list-disc ps-5;
      li {
        @apply py-1;
        img {
          @apply py-1;
        }
      }
    }

    pre {
      overflow: auto;
    }

    table {
      @apply text-sm block min-w-[100%];
      display: block;
      width: 0px;
      overflow-x: auto;
      th,
      td {
        @apply font-light text-left text-nowrap p-3 border-b-1 border-zinc-800/10 dark:border-zinc-100/10;
      }
      th {
        @apply font-extrabold border-b-2 border-zinc-800/20 dark:border-zinc-100/10;

      }
      strong {
        @apply font-black;
      }
    }

    code {
      @apply bg-zinc-500/5 text-red-400 p-1 text-base;
      border-radius: 0.5em;
      min-width: 100%;
      width: 0px;
      overflow: auto; /* Or scroll */
    }

    blockquote {
      @apply p-8 m-4 border-s-4 bg-mj-blue/5;
    }
  }

  .badge {
    @apply inline-flex items-center rounded-md bg-white px-2 py-1 text-xs font-medium text-gray-600 inset-ring inset-ring-gray-500/10;

    @variant dark {
      @apply bg-zinc-700 text-zinc-200;
    }
  }

  .about p {
    @apply mt-5;
  }

  .projects,
  .blog-overview {
    ul {
      @apply ms-5 relative before:absolute before:top-0 before:bottom-0 before:-left-4 before:block before:w-1 before:rounded-full before:bg-mj-blue/10 before:content-[''];
      li {
        @apply relative before:absolute before:top-[1.98rem] before:-left-[1.3rem] before:block before:size-4 before:rounded-full before:border-1 before:border-2 before:border-mj-blue/75 before:bg-white before:content-[''] ps-2 pb-5;
        h4 {
          @apply text-mj-blue;
        }
      }
    }
    @variant dark {
      .projects {
        ul {
          @apply before:bg-zinc-500/10;
        }
      }
    }
  }
  .blog-overview {
    ul {
      li {
        @apply py-6;
      }
    }
  }
}

